# groupie

./: main.py  pyproject.toml
src/groupie/: __init__.py
