[project]
name = "groupie"
description = "Exception group utilities for exceptional code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_oidc"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
